# mailing_management_service

./: README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/templates/blog/: base.html  blog_post_confirm_delete.html  blog_post_detail.html  blog_post_form.html  blog_post_list.html
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/templates/clients/: client_confirm_delete.html  client_form.html  clients_list.html
config/: settings.py  urls.py  wsgi.py
logs/: admin.py  models.py  urls.py  views.py
logs/templates/logs/: log_list.html
mailing/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
mailing/management/commands/: run_mailing.py
mailing/templates/mailing/: add_clients_to_mailing.html  base.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html
mailing/templatetags/: custom_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: populate_groups.py
users/templates/users/: edit_profile.html  email_confirmation_failed.html  email_not_verified.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  registration_form.html  users_list.html  verification_email.html  verification_pending.html
