[tool.poetry]
name = "mailing-management-service"
version = "0.1.0"
description = ""
authors = ["exetch <gassemark@gmail.com>"]
readme = "README.md"
packages = [{include = "mailing_management_service"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
pillow = "9.5.0"
psycopg2 = "^2.9.9"
celery = {extras = ["redis"], version = "^5.3.4"}
pytz = "^2023.3.post1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
